# pose_estimation

./: .gitignore  README.md
c++/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  TestSVM.cpp  TestSVM_libsvm.cpp  TrainSVM.cpp  TrainSVM_libsvm.cpp  cmake_install.cmake
experimental_notebooks/: 1_save_normalized_right_hand_data.ipynb  classifier.ipynb  create_pose_clusters.ipynb  predict_joints.ipynb  update_joint_loc_for_new_origin.ipynb
python/: create_pose_clusters.py  mpii_dataset.py  preprocessing.py  save_cropped_images.py  save_normalized_right_hand_data.py  update_joint_loc_for_new_origin.py  util.py
